semiPrj 프론트 수정 작업

--- a/Mylog/src/main/webapp/resources/mypage/search/search.css
+++ b/Mylog/src/main/webapp/resources/mypage/search/search.css
@@ -55,3 +55,8 @@ input[name="search"] {
     padding: 3px;
     font-size: 8px;
 }
+
+.search-etc{
+	border-bottom: 1px solid gray;
+	padding-bottom: 19px
+}
