--- a/Mylog/src/main/webapp/resources/mypage/setting/setting.css
+++ b/Mylog/src/main/webapp/resources/mypage/setting/setting.css
@@ -3,7 +3,7 @@
     grid-row: span 2;
     ;
     display: grid;
-    grid-template-rows: 1fr 2.5fr;
+    grid-template-rows: 1fr 2fr;
     justify-items: center;
 }
 
@@ -48,7 +48,7 @@
 }
 .setting-info {
     display: grid;
-    grid-template-rows: 1fr 1fr 0.7fr;
+    grid-template-rows: repeat(3, 1fr);
     width: 90%;
     height: 80%;
     align-items: center;
@@ -66,7 +66,7 @@
 }
 .setting-list {
     display: grid;
-    grid-template-rows: 1.5fr 1fr 0.7fr;
+    grid-template-rows: repeat(3, 1fr);
     align-items: center;
     justify-items: center;
     margin: 10px;
@@ -82,21 +82,15 @@
     height: 60%;
     font-size: 13px;
     align-items: center;
-    padding: 0px;
     border-bottom: 1px solid rgb(117, 116, 116);
 }
 
 .setting-list-title{
+    grid-row: span 2;
     font-size: 17px;
     font-weight: 900;
 }
-.setting-list-ex{
-    grid-column: span 2;
-    display: flex;
-    justify-content: center;
-    font-weight: 900;
-    font-size:12px;
-}
+
 .setting-list > div:nth-child(2) {
     display: grid;
     grid-template-columns: 1fr 3fr;
@@ -150,54 +144,4 @@
 .setting-list-quit+div{
     font-size: 11.3px;
     font-weight: 900;
-}
-
-.myNameInput{
-    border-radius: 5px;
-    background-color: rgb(51, 50, 50);
-    width: 170px;
-    height: 25px;
-    font-weight: 900;
-    font-size: 14px;
-    color: white;
-    box-shadow: none; 
-}
-
-.myIntroduceInput{
-    border-radius: 5px;
-    width: 300px;
-    height: 25px;
-    font-size: 11px;
-    box-shadow: none; 
-}
-
-.settingChangeSubmit{
-    border: 1px solid white;
-    border-radius: 5px;
-    box-shadow: none; 
-    background-color: rgb(46, 179, 52);
-    color: white;
-    width: 60px;
-    height: 28px;
-    font-weight: 900;
-    box-shadow: none;
-}
-
-.settingChangeSubmit:hover{
-    background-color: rgb(89, 201, 94);
-}
-
-.social{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 1fr);
-    gap: 15px;
-    margin-bottom: 15px;
-}
-
-.inputSocial{
-    border-radius: 5px;
-    width: 60%;
-    height: 100%;
-    color: black;
 }
