--- a/Mylog/src/main/webapp/resources/mypage/mypage/mypage.css
+++ b/Mylog/src/main/webapp/resources/mypage/mypage/mypage.css
@@ -169,11 +169,11 @@ td > a:hover{
 .board {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 7fr 1fr 2.5fr 1fr 1fr;
+    grid-template-rows: 8fr 1fr 1.5fr 1fr 1fr;
     place-items: center center;
-    height: 300px;
-    gap: 20px;
+    gap: 10px;
     font-size: 12px;
+    margin-bottom: 13px;
 }
 
 .img {
