--- a/Mylog/src/main/webapp/resources/qna/writeQna.css
+++ b/Mylog/src/main/webapp/resources/qna/writeQna.css
@@ -2,7 +2,7 @@ body {
 	background-color: rgb(247, 243, 243);
 	display: grid;
 	grid-template-columns: 1fr 2fr 1fr;
-	grid-template-rows: 1fr 2fr 5fr 2fr;
+	grid-template-rows: 1fr 4fr 1fr;
 	width: 98vw;
 	height: 100vh;
 }
@@ -38,81 +38,22 @@ header {
 	background-color: rgb(252, 250, 248);
 }
 
-.first-d {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-
-.search {
-	height: 30px;
+.title {
+	width: 50%;
+	height: 40px;
 	font-size: 15px;
+	font-weight: 900;
+	margin-bottom: 10px;
 }
 
-.search-s {
-	height: 35px;
-	color: white;
-	background-color: black;
-	border-radius: 5px;
+.wqna-content {
+	width: 80%;
+	height: 400px;
+	resize: none;
 }
 
-.left {
-	grid-column: 1;
-	grid-row: span 4;
-}
-
-.right {
-	grid-column: 3;
-	grid-row: span 4;
-}
-
-.qna-title {
-	display: grid;
-	grid-template-columns: 1fr 2fr 1fr 1fr 0.5fr;
-}
-
-.qna_title {
-	width: auto;
-	table-layout: fixed;
-	border-collapse: collapse;
-}
-
-.col1 {
-	width: 10%;
-}
-
-.col2 {
-	width: 20%;
-}
-
-.col3 {
-	width: 10%;
-}
-
-.col4 {
-	width: 10%;
-}
-
-.col5 {
-	width: 5%;
-}
-
-.page_area {
-	display: grid;
-	grid-template-rows: 1fr 1fr;
-}
-
-.qna-npage {
-	display: flex;
-	justify-content: center;
-}
-
-.write_qna {
-	display: flex;
-	justify-content: end;
-}
-
-.write-btn {
+.wbtn {
+	margin-right: 180px;
 	background-color: #646464;
 	font-size: 15px;
 	text-align: center;
@@ -125,7 +66,12 @@ header {
 	border: none
 }
 
-.write-btn:hover {
+.wbtn:hover {
 	cursor: pointer;
 	background-color: black;
+}
+
+.btn-main {
+	display: flex;
+	justify-content: end;
 }
