--- a/Mylog/src/main/webapp/resources/write/write.css
+++ b/Mylog/src/main/webapp/resources/write/write.css
@@ -1,36 +1,72 @@
 body {
-	height: 100%;
-	margin: 0px;
+	margin: 0;
+	height: 100vh;
 }
 
 .new_board {
-	display: flex;
-	flex-direction: row;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
 	height: 100%;
 }
 
 .write_board {
-	flex: 1;
-	width: 50%;
-	background-color: rgb(247, 243, 243);
-	height: 100%;
 	display: flex;
 	flex-direction: column;
-	position: relative;
+	flex: 1 1 0%;
+	min-height: 0;
+}
+
+.write_board {
+	background-color: rgb(247, 243, 243);
 }
 
 .check_board {
-	flex: 1;
-	height: 100vw;
-	width: 50%;
 	background-color: rgb(221, 221, 221);
+	position: relative;
+}
+
+.empt {
+	margin-bottom: 0.66rem;
+	margin-left: 1rem;
+	background-color: rgb(73, 80, 87);
+	height: 6px;
+	width: 4rem;
+}
+
+.write_title>:nth-child(1), .content-area, .write_board>textarea, .tag {
+	background-color: rgb(247, 243, 243);
+	width: 95%;
+	resize: none;
+	border: none;
 }
 
 .write_title>:nth-child(1) {
-	background-color: rgb(247, 243, 243);
 	height: 43px;
-	width: 95%;
-	resize: none;
+}
+
+.write_title textarea, .content-area, .write_board>textarea {
+	padding: 10px;
+	outline: none;
+}
+
+.write_title textarea:focus, .content-area:focus, .write_board>textarea:focus
+	{
+	border: none;
+}
+
+.content-area {
+	height: 80vh;
+	margin-top: 10px;
+	font-size: 1.5rem;
+	height: 70vh;
+}
+
+.tag {
+	font-weight: 300;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	height: 2rem;
+	padding: 0.5rem;
 }
 
 .title {
@@ -38,5 +74,33 @@ body {
 	font-weight: 900;
 	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
 		sans-serif;
-	border: 0px;
+	border: none;
+}
+
+.img-btn {
+	border-radius: 5px;
+	background-color: rgb(247, 243, 243);
+	border: none;
+}
+
+.img-btn:hover {
+	cursor: pointer;
+	background-color: #DEE2E6;
+}
+
+.set-btn {
+	padding: 0 1rem;
+	height: 4rem;
+	width: 95%;
+	box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 8px;
+	background: var(--editor-footer);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.check_board {
+	display: flex;
+	flex-direction: column;
+	min-height: 0;
 }
