공지사항 FAQ QNA 조회, 상세조회, 한무스크롤

--- a/Mylog/src/main/webapp/resources/mypage/mypage/mypage.css
+++ b/Mylog/src/main/webapp/resources/mypage/mypage/mypage.css
@@ -21,6 +21,7 @@ body {
     width: 98vw;
     height: 120vh;
     background-color: rgb(247, 247, 247);
+    margin-bottom: 20px;
 }
 /* TOP */
 header {
