--- a/Mylog/src/main/webapp/resources/community/community.css
+++ b/Mylog/src/main/webapp/resources/community/community.css
@@ -2,16 +2,12 @@
     grid-column: span 3;
     grid-row: span 2;
     display: grid;
-    grid-template-columns: 1fr 5fr;
-    grid-template-rows: 1fr 4.5fr;
     justify-items: center;
 }
 .notice-title{
     grid-column: span 2;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 60%;
+    height: 100px;
 }
 .notice-title > div{
     display: flex;
@@ -21,7 +17,7 @@
     background-color: rgb(94, 210, 45);
     border-radius: 10px;
     width: 100%;
-    height: 50%;
+    height: 60px;
     font-weight: 900;
     font-size: 25px;
 }
@@ -35,13 +31,13 @@
     border: 2px solid rgb(101, 100, 100);
     border-radius: 10px;
     margin: 5px;
-    padding: 10px;
+    padding: 5px;
+    padding-left: 0px;
+    padding-right: 15px;
     width: 10.4%;
 }
 .notice-main{
     grid-column: span 2;
-    display: grid;
-    grid-template-rows: repeat(2, 0.7fr) repeat(4, 1.8fr);
     border: 1px solid black;
     border-radius: 10px;
     width: 60%;
@@ -50,6 +46,8 @@
     box-sizing: border-box;
     gap: 10px;
 }
+
+
 #notice-svg{
     position: relative;
     top: 32px;
@@ -58,12 +56,21 @@
 .notice-search{
     display: grid;
     grid-template-rows: 1fr;
+    margin-bottom: 20px;
 }
+
 input[name = 'notice-search']{
     border: 1px solid black;
     border-radius: 25px;
     padding-left: 35px;
     width: 77%;
+    height: 35px;
+}
+input[name = 'faq-search']{
+    border: 1px solid black;
+    border-radius: 25px;
+    padding-left: 35px;
+    width: 95.5%;
     height: 35px;
 }
 select{
@@ -74,11 +81,9 @@ select{
     padding-left: 30px;
 }
 .range{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     gap: 10px;
     align-items: center;
-    margin-bottom: 5px;
+    margin-bottom: 20px;
     font-size: 15px;
     font-weight: 900;
     color: rgb(3, 51, 22);
@@ -87,39 +92,12 @@ select{
     background-color: greenyellow;
     cursor: pointer;
 }
-.page{
-    display: flex;
-    justify-content: end;
-    margin-right: 20px;
-    gap: 10px;
-}
-.page > div{
-    font-size: 25px;
-    border: 1px solid rgb(222, 219, 219);
-    border-radius: 25px;
-    background-color: rgb(94, 210, 45);
-    min-width: 45px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 1%;
-    box-sizing: border-box;
-    padding-left: 5px;
-    padding-right: 5px;
-}
-#page{
-    display: flex;
-    justify-content: center;
-}
-.aPage{
-    font-size: 18px;
-    margin-right: 5px;
-    margin-left: 5px;
-}
 .notice-search-array{
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr 9fr 0.01fr ;
     margin-left: 20px;
     gap: 10px;
+    margin-bottom: 15px;
 }
 .notice-search-array > div{
     border: 1px solid rgb(222, 219, 219);
@@ -145,7 +123,8 @@ select{
     box-sizing: border-box;
     padding-left: 19px;
     place-items: center start;
-
+    height: 100px;
+    margin-bottom: 10px;
 }
 .notice-content:hover{
     border: 2px solid black;
@@ -163,20 +142,23 @@ select{
 .qna-write{
     display: flex;
     justify-content: end;
+    align-items: center;
     margin-right: 13px;
 }
 .qna-write > a{
-    display: flex;
-    justify-content: end;
-    margin-right: 10px;
     border: 1px solid rgb(222, 219, 219);
     border-radius: 25px;
     background-color: rgb(94, 210, 45);
-    min-width: max-content;
-    padding: 4px;
+    min-width: 65px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
     padding-left: 10px;
     padding-right: 10px;
-    font-weight: 600;
+    margin-right: 10px;
+    min-width: max-content;
 }
 
 .qna-write > a:hover{
@@ -192,19 +174,30 @@ input[name = 'qna-title']{
     border: 1px solid black;
     border-radius: 15px;
     margin-top: 10px;
-    margin-bottom: 30px;
-    width: 700px;
+    margin-bottom: 20px;
+    width: 800px;
     height: 35px;
     padding-left: 20px;
     font-size: 15PX;
     font-weight: 900;
 }
+input[name = 'qna-time']{
+    border: 1px solid black;
+    border-radius: 15px;
+    margin-bottom: 20px;
+    height: 35px;
+    padding-left: 10px;
+    padding-right: 10px;
+    font-size: 13PX;
+    font-weight: 600;
+    width: min-content;
+}
 .notice-textarea {
     border: 1px solid black;
     border-radius: 15px;
     resize: none;
-    width: 700px;
-    height: 400px;
+    width: 800px;
+    height: 450px;
     padding-left: 20px;
     padding-top: 20PX;
     font-size: 13PX;
@@ -237,4 +230,33 @@ input[name = 'qna-write-submit']{
 }
 .selectQna{
     pointer-events: none;
+}
+.message{
+    display: none;
+    position: relative;
+    color: gray;
+    left: 50%;
+}
+.timeStamp{
+    display: flex;
+    justify-content: end;
+}
+
+.answerQna{
+    height: 250px;
+    pointer-events: none;
+}
+.notice-content-sell{
+    font-weight: 900;
+}
+body{
+    font-family: "고딕";
+}
+.qna-write-input{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.qna-write-input >div:nth-child(1){
+    font-weight: 900;
 }
